<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Covid Insight</string>
    <string name="implement_api_here">implement API here</string>
    <string name="app_logo">logo of the application</string>
    <string name="home_screen">Home Screen</string>
    <string name="covid_data">Covid Data</string>
    <string name="precaution">Precaution</string>
    <string name="news">News</string>
    <string name="vaccination_centers">Vaccination Centers</string>
    <string name="database">Covid Data</string>
    <string name="home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="covid_tracking">COVID TRACKING</string>
    <string name="vaccination_centers_homepage">VACCINATION CENTERS</string>
    <string name="news_homepage">NEWS</string>
    <string name="precautions">PRECAUTIONS</string>
    <string name="center_name">Center Name</string>
    <string name="center_location">Center Location</string>
    <string name="center_timing">Center Timing</string>
    <string name="vaccine_name">Vaccine Name</string>
    <string name="fees">Fees</string>
    <string name="age_limit">Age Limit</string>
    <string name="availiability">Availiability</string>
    <string name="enter_pin_code">Enter Pin code</string>
    <string name="search">Search</string>
    <string name="indian_states_records">INDIAN STATES RECORDS</string>
    <string name="india_record">India Record</string>
    <string name="number_of_deaths" tools:ignore="DuplicateDefinition">Number of Deaths</string>
    <string name="deaths" tools:ignore="DuplicateDefinition">Deaths</string>
    <string name="number_of_recovered" tools:ignore="DuplicateDefinition">Number of Recovered</string>
    <string name="recovered" tools:ignore="DuplicateDefinition">Recovered</string>
    <string name="number_of_cases" tools:ignore="DuplicateDefinition">Number of Cases</string>
    <string name="cases" tools:ignore="DuplicateDefinition">Cases</string>
    <string name="world_wide_record">World Wide Record</string>
</resources>