<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_margin="4dp"
    android:layout_height="wrap_content"
    app:cardCornerRadius="15dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/idTVCenterName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="3dp"
            android:drawablePadding="4dp"
            android:padding="3dp"
            android:text="@string/center_name"
            android:textColor="@color/black"
            app:drawableLeftCompat="@drawable/ic_hospital" />

        <TextView
            android:id="@+id/idTVCenterLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/idTVCenterName"
            android:layout_marginStart="3dp"
            android:layout_marginTop="3dp"
            android:layout_marginEnd="3dp"
            android:layout_marginBottom="3dp"
            android:drawablePadding="4dp"
            android:padding="3dp"
            android:text="@string/center_location"
            android:textColor="@color/black"
            app:drawableStartCompat="@drawable/ic_location"
            app:drawableLeftCompat="@drawable/ic_location" />

        <TextView
            android:id="@+id/idTVCenterTimings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/idTVCenterLocation"
            android:drawablePadding="4dp"
            android:padding="3dp"
            android:text="@string/center_timing"
            android:textColor="@color/black"
            app:drawableLeftCompat="@drawable/ic_timings"
            app:drawableStartCompat="@drawable/ic_timings" />

        <LinearLayout
            android:id="@+id/idLL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_margin="3dp"
            android:orientation="horizontal"
            android:layout_below="@id/idTVCenterTimings">

            <TextView
                android:id="@+id/idTVVaccineName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/vaccine_name"
                android:drawablePadding="3dp"
                android:layout_margin="3dp"
                android:textColor="@color/black"
                app:drawableLeftCompat="@drawable/ic_vaccine" />

            <TextView
                android:id="@+id/idTVVaccineFees"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fees"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_margin="3dp"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_below="@id/idLL"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/idTVAgeLimit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/age_limit"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:layout_margin="3dp"
                android:padding="3dp"/>

            <TextView
                android:id="@+id/idTVAvailability"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/availiability"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:layout_margin="3dp"
                android:padding="3dp"/>

        </LinearLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>