<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardCornerRadius="15dp"
        android:layout_marginHorizontal="5dp"
        app:cardElevation="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/world_wide_record"
                android:textAlignment="center"
                android:gravity="center_horizontal"
                android:textSize="18sp"
                android:padding="3dp"
                android:layout_margin="3dp"
                android:textColor="@color/black"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3"
                android:baselineAligned="false">


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cases"
                        android:padding="4dp"
                        android:textSize="15sp"
                        android:textAlignment="center"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/black"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/idTVWorldCases"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/number_of_cases"
                        android:textAlignment="center"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/blue"
                        android:padding="4dp"
                        android:textSize="12sp"/>



                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/recovered"
                        android:padding="4dp"
                        android:textSize="15sp"
                        android:textAlignment="center"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/black"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/idTVWorldRecovered"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/number_of_recovered"
                        android:textAlignment="center"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/green"
                        android:padding="4dp"
                        android:textSize="12sp"/>



                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/deaths"
                        android:padding="4dp"
                        android:textSize="15sp"
                        android:textAlignment="center"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/black"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/idTVWorldDeaths"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/number_of_deaths"
                        android:textAlignment="center"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/red"
                        android:padding="4dp"
                        android:textSize="12sp"/>



                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardCornerRadius="15dp"
        android:layout_marginHorizontal="5dp"
        app:cardElevation="3dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/india_record"
                android:textAlignment="center"
                android:gravity="center_horizontal"
                android:textSize="18sp"
                android:padding="3dp"
                android:layout_margin="3dp"
                android:textColor="@color/black"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="3"
                android:baselineAligned="false">


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/cases"
                        android:padding="4dp"
                        android:textSize="15sp"
                        android:textAlignment="center"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/black"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/idTVIndiaCases"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/number_of_cases"
                        android:textAlignment="center"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/blue"
                        android:padding="4dp"
                        android:textSize="12sp"/>



                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/recovered"
                        android:padding="4dp"
                        android:textSize="15sp"
                        android:textAlignment="center"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/black"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/idTVIndiaRecovered"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/number_of_recovered"
                        android:textAlignment="center"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/green"
                        android:padding="4dp"
                        android:textSize="12sp"/>



                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/deaths"
                        android:padding="4dp"
                        android:textSize="15sp"
                        android:textAlignment="center"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/black"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/idTVIndiaDeaths"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/number_of_deaths"
                        android:textAlignment="center"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/red"
                        android:padding="4dp"
                        android:textSize="12sp"/>



                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        android:layout_margin="5dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/skyBlue"
            android:text="@string/indian_states_records"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:padding="10dp"/>
    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/idRVStates"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"/>


</LinearLayout>